# ebpf-call

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ebpf-call
.github/workflows/: c.yml
examples/: CMakeLists.txt  basic.c  read.c  read_partial.c  state.c  test.txt
src/: exts.h  file.h  loader.c  loader.h
src/backends/: mmap.c
src/modules/: file.c  file.h  memory.c  memory.h  print.c  print.h  strings.h  test.c
